tests/sources/invalid/generics/generic_class_unclosed_type_args.fire
// Missing closing '>' for a generic class instantiation's type-argument
// list (top-level and nested).
class Pair<T, U> {
    a: T;
    b: U;

    fn Pair(a: T, b: U) {
        this.a = a;
        this.b = b;
    }
}

fn main() -> int32 {
    p: Pair<int32 int32> = Pair(1, 2);  //~ ERROR FS-PARSE-0010 @19
//~^ ERROR FS-PARSE-0012 @28
    return 0;
}
